# EV-BMS

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: base.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  predictions.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/ml/: registry.py
backend/app/schemas/: battery.py  prediction.py
backend/app/services/: prediction_service.py
backend/tests/: test_health.py  test_ml_registry.py  test_predictions_api.py
frontend/: Dockerfile
frontend/src/: index.css
frontend/src/api/: client.ts  health.ts
frontend/src/components/: BackendStatusBadge.tsx
ml/: README.md  pyproject.toml  requirements.txt
ml/configs/: nasa_battery.yaml
ml/src/data/: cycle_summary.py  nasa_loader.py  validation.py
ml/src/eda/: generate_eda_report.py  palette.py
ml/src/features/: battery_features.py
ml/src/pipelines/: build_nasa_dataset.py
ml/src/training/soh/: dataset.py  evaluate.py  model_specs.py  robust_evaluation.py  train_soh_models.py  tuning.py
ml/tests/: test_battery_features.py  test_cycle_summary.py  test_nasa_loader.py  test_robust_evaluation.py  test_soh_dataset.py  test_soh_evaluate.py  test_validation.py
shared/: README.md
shared/schemas/: battery_metadata.schema.json
(+3 files in other folders)
