[project]
name = "bms-backend"
version = "0.1.0"
description = "Agentic AI Battery Management System - FastAPI serving layer"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501: line length is handled by formatting, not worth failing CI over.
# B008: FastAPI's `Depends(...)` in a parameter default is the documented,
# idiomatic dependency-injection pattern, not the mutable-default footgun
# this rule targets.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
